# anijouhou

./: .gitignore  .todo  .todo.md  Cargo.toml  Notes.md  README.md  install.sh
.github/workflows/: linux-build.yml  windows-build.yml
docs/: additional_installation_instructions.md  installation_from_precompiled_binaries.md
scripts/: README.md  aniaccount.sh
src/: api.rs  cache.rs  example.rs  frontend.rs  main.rs
