[package]
name = "anijouhou"
description = "Terminal application that displays the total amount of time spent watching anime by fetching data from anilist."
version = "0.3.4"
edition = "2024"

[dependencies]
serde_json = "1.0"
reqwest = "0.11.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
open = "5.3.3"
chrono = "0.4.42"