[package]
name = "anijouhou"
description = "Anijouhou is an AniList profile statistics viewer for the terminal."
version = "0.4.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["blocking"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
terminal_size = "0.4.3"
viuer = { version = "0.11.0", features = ["print-file"] }
image = "0.25.9"
open = "5.3.3"
chrono = "0.4.42"
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Link time optimizations (e.g. remove dead code).
codegen-units = 1 # Allow maximum size reduction optimizations.
panic = "abort" # Application no longer displays a bracktrace. Hence the unwinding code is no longer needed.
opt-level = "z" # Optimization level. See here: https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level